--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Ivan 'Nobody' Kudriavcev",
   "dependencies": {
     "core-js": "^3.4.3",
+    "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
